# bevy_tilemap

./: Cargo.toml  LICENSE  README.md
assets/: atlas_packed.tileset.ron  glob.tileset.ron  paths.tileset.ron
assets/isometric/: atlas.tileset.ron
assets/square/: atlas.tileset.ron  glob.tileset.ron  paths.tileset.ron
examples/: basic.rs  isometric.rs
src/: chunk.rs  chunk.wgsl  lib.rs  storage.rs  tile.rs  tilemap.rs  tilemap_chunk.rs  tilemap_chunk_material.rs  tileset.rs
