[package]
name = "bevy_tilemap"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
bevy = { version = "0.16.0-rc", default-features = false, features = [
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_asset",
  "bevy_sprite",
] }
bytemuck = "1.22.0"

[dev-dependencies]
bevy = { version = "0.16.0-rc", features = ["bevy_remote", "bevy_dev_tools"] }
bevy_pancam = { git = "https://github.com/cpetzold/bevy_pancam", branch = "bevy-0.16" }
rand = "0.9.0"

[[example]]
name = "basic"
path = "examples/basic.rs"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs_dep"]
rustdoc-args = [
  "-Zunstable-options",
  "--generate-link-to-definition",
  "--html-after-content",
  "docs-rs/trait-tags.html",
]
all-features = true
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs_dep)'] }
