[package]
name = "bevy_tilemap"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
bevy = { git = "https://github.com/ConnerPetzold/bevy", branch = "tilemap-chunk-rendering", default-features = false, features = [
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_asset",
  "bevy_sprite",
] }
bytemuck = "1.22.0"
glob = "0.3.2"
ron = "0.10.1"
serde = "1.0.219"
thiserror = "2.0.12"

[dev-dependencies]
bevy = { git = "https://github.com/ConnerPetzold/bevy", branch = "tilemap-chunk-rendering", features = [
  "bevy_remote",
  "bevy_dev_tools",
  "basis-universal",
] }
bevy_pancam = { path = "../bevy_pancam" }
rand = "0.9.0"

[[example]]
name = "basic"
path = "examples/basic.rs"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs_dep"]
rustdoc-args = [
  "-Zunstable-options",
  "--generate-link-to-definition",
  "--html-after-content",
  "docs-rs/trait-tags.html",
]
all-features = true
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs_dep)'] }
